compiler/tests/errortests/unimplemented-interface.txt
FILENAME:6:8: error: Struct 'S' does not implement method 'foo()' required by interface 'I'.
struct S implements I {
       ^
